# givegram

./: .gitignore  README.md  REDUNDANCY_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
backend/: main.py  models.py  scraper.py  session_store.py  winner_selector.py
backend/tests/: conftest.py  test_main.py  test_models.py  test_scraper.py  test_session_store.py  test_winner_selector.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
