[project]
name = "givegram"
version = "0.1.0"
description = "Instagram Giveaway Winner Picker"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "import-error",        # handled by mypy; pylint can't reliably resolve venv imports
    "too-few-public-methods",  # dataclasses and Pydantic models are intentionally small
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
